--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.0",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.1",
-    "@prisma/client": "^5.10.0"
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^50.6.9",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
     "prisma": "^5.10.0"
