--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,7 @@
     "node": true,
     "es2021": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
@@ -18,6 +15,7 @@
     "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "no-var": "error",
     "prefer-const": "error",
-    "jsdoc/no-undefined-types": 1
+    "jsdoc/no-undefined-types": 1,
+    "no-trailing-spaces": "error"
   }
 }
