--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "imports": {
-    "@/*": "./src/*"
+    "#*": "./src/*"
   },
   "scripts": {
     "start": "node ./src/index.js",
