--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "format": "prettier --write .",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
+    "@faker-js/faker": "^8.4.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
     "pino": "^9.6.0",
