--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "prisma:seed": "node prisma/seed.js"
+    "prisma:seed": "node prisma/seed.js",
+    "commands": "node ./deploy_commands.js"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
