--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "commands": "node ./deploy_commands.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.0",
     "@faker-js/faker": "^8.4.1",
+    "@prisma/client": "^5.10.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
+    "express": "^5.1.0",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0"
   },
