--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^16.4.1",
     "express": "^5.1.0",
     "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
