--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
     "express": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "uuid": "^11.1.0"
